--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
         background:rgba(0,0,0,0.5); padding:8px; border-radius:6px;
     }
     #crosshair {
-        position:absolute;
-        top:50%; left:50%;
-        width:10px; height:10px;
-        margin-left:-5px; margin-top:-5px;
-        pointer-events:none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        pointer-events: none;
+        transform: translate(-50%, -50%);
     }
     #crosshair:before, #crosshair:after {
-        content:'';
-        position:absolute;
-        background:white;
+        content: '';
+        position: absolute;
+        background: white;
     }
-    #crosshair:before { left:50%; top:0; width:2px; height:100%; transform:translateX(-50%); }
-    #crosshair:after { top:50%; left:0; height:2px; width:100%; transform:translateY(-50%); }
+    #crosshair:before { left: 50%; top: 0; width: 2px; height: 100%; transform: translateX(-50%); }
+    #crosshair:after { top: 50%; left: 0; width: 100%; height: 2px; transform: translateY(-50%); }
 </style>
 </head>
 <body>
@@ -36,7 +38,6 @@ Kamera: 1(sol) 3(sağ) 7(yukarı) 9(aşağı)<br>
 <div id="crosshair"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.157/build/three.min.js"></script>
-
 <script>
 // ---- Sahne ----
 const scene = new THREE.Scene();
@@ -45,9 +46,16 @@ scene.background = new THREE.Color(0x87CEEB);
 const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, 0.1, 1000);
 camera.position.set(0, 2, 5);
 
-const renderer = new THREE.WebGLRenderer();
+const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth, innerHeight);
 document.body.appendChild(renderer.domElement);
+
+// ---- Ekran boyutuna uyum ----
+window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+});
 
 // ---- Işık ----
 const light = new THREE.DirectionalLight(0xffffff, 1);
@@ -55,17 +63,14 @@ light.position.set(1,1,1).normalize();
 scene.add(light);
 
 // ---- Bloklar ----
-// Oyuncunun seçebileceği bloklar
 const blockTypes = [
-    new THREE.MeshLambertMaterial({color:0x0000ff}), // mavi blok
+    new THREE.MeshLambertMaterial({color:0x0000ff}),
     new THREE.MeshLambertMaterial({color:0xaaaaaa}),
     new THREE.MeshLambertMaterial({color:0x8B4513})
 ];
 let currentBlock = 0;
 
 const world = [];
-
-// addBlock fonksiyonu artık hem malzeme hem tip alabiliyor
 function addBlock(x,y,z, typeOrMaterial){
     const geo = new THREE.BoxGeometry(1,1,1);
     const mat = (typeOrMaterial instanceof THREE.Material) ? typeOrMaterial : blockTypes[typeOrMaterial];
@@ -75,9 +80,9 @@ function addBlock(x,y,z, typeOrMaterial){
     world.push(cube);
 }
 
-// ---- Düz dünya 100x100 ----
-const WORLD_SIZE = 50; // x,z = -50 -> 49
-const groundMaterial = new THREE.MeshLambertMaterial({color:0x00aa00}); // yeşil zemin
+// ---- Düz dünya ----
+const WORLD_SIZE = 40;
+const groundMaterial = new THREE.MeshLambertMaterial({color:0x00aa00});
 for(let x=-WORLD_SIZE; x<WORLD_SIZE; x++){
     for(let z=-WORLD_SIZE; z<WORLD_SIZE; z++){
         addBlock(x,0,z, groundMaterial);
@@ -86,13 +91,7 @@ for(let x=-WORLD_SIZE; x<WORLD_SIZE; x++){
 
 // ---- Oyuncu ----
 const START_POS = {x:0, y:2, z:0};
-const player = {
-    x: START_POS.x, y: START_POS.y, z: START_POS.z,
-    yaw:0, pitch:0,
-    vy:0,
-    width:0.6, height:1.8
-};
-
+const player = {x: START_POS.x, y: START_POS.y, z: START_POS.z, yaw:0, pitch:0, vy:0, width:0.6, height:1.8};
 function updateCamera(){
     camera.position.set(player.x, player.y, player.z);
     camera.rotation.order = "YXZ";
@@ -113,11 +112,8 @@ function breakBlock(){
     const px = Math.round(player.x + dir.x*2);
     const py = Math.round(player.y + dir.y*2);
     const pz = Math.round(player.z + dir.z*2);
-
     for(let b of world){
-        if(Math.round(b.position.x)==px &&
-           Math.round(b.position.y)==py &&
-           Math.round(b.position.z)==pz){
+        if(Math.round(b.position.x)==px && Math.round(b.position.y)==py && Math.round(b.position.z)==pz){
             scene.remove(b);
             world.splice(world.indexOf(b),1);
             break;
@@ -130,9 +126,7 @@ function checkCollision(nx,ny,nz){
     for(let b of world){
         if(Math.abs(nx-b.position.x)<0.5+player.width/2 &&
            Math.abs(ny-b.position.y)<0.5+player.height/2 &&
-           Math.abs(nz-b.position.z)<0.5+player.width/2){
-            return true;
-        }
+           Math.abs(nz-b.position.z)<0.5+player.width/2) return true;
     }
     return false;
 }
@@ -143,16 +137,9 @@ function tryMove(dx,dy,dz){
     const ny = player.y + dy;
     const nz = player.z + dz;
 
-    // Normal çarpışma kontrolü (bloklarla)
-    if(!checkCollision(nx,ny,nz)){
-        player.x = nx;
-        player.y = ny;
-        player.z = nz;
-    } else if(dy<0){
-        player.vy=0;
-    }
+    if(!checkCollision(nx,ny,nz)) player.x = nx, player.y = ny, player.z = nz;
+    else if(dy<0) player.vy=0;
 
-    // Harita sınırları görünmez duvar
     if(player.x < -WORLD_SIZE+0.5) player.x = -WORLD_SIZE+0.5;
     if(player.x > WORLD_SIZE-1.5) player.x = WORLD_SIZE-1.5;
     if(player.z < -WORLD_SIZE+0.5) player.z = -WORLD_SIZE+0.5;
@@ -161,7 +148,6 @@ function tryMove(dx,dy,dz){
     updateCamera();
 }
 
-// ---- Kamera yönlü hareket ----
 function tryMoveCam(forward, right){
     const dir = new THREE.Vector3();
     camera.getWorldDirection(dir);
@@ -180,11 +166,11 @@ function tryMoveCam(forward, right){
 // ---- Kontroller ----
 document.addEventListener("keydown", e=>{
     switch(e.key){
-        case "2": tryMoveCam(1,0); break;  // ileri
-        case "8": tryMoveCam(-1,0); break; // geri
-        case "4": tryMoveCam(0,-1); break; // sola
-        case "6": tryMoveCam(0,1); break;  // sağ
-        case "5": if(player.vy==0) player.vy = 0.2; break; // zıplama
+        case "2": tryMoveCam(1,0); break;
+        case "8": tryMoveCam(-1,0); break;
+        case "4": tryMoveCam(0,-1); break;
+        case "6": tryMoveCam(0,1); break;
+        case "5": if(player.vy==0) player.vy = 0.2; break;
 
         case "1": player.yaw += 0.1; updateCamera(); break;
         case "3": player.yaw -= 0.1; updateCamera(); break;
@@ -205,11 +191,8 @@ function applyGravity(){
 
 // ---- Bug kontrolü ----
 function checkOutOfBounds(){
-    if(player.y < -10 || player.y > 1000){  // çok düşerse veya çok yükselirse
-        player.x = START_POS.x;
-        player.y = START_POS.y;
-        player.z = START_POS.z;
-        player.vy = 0;
+    if(player.y < -10 || player.y > 1000){
+        player.x = START_POS.x; player.y = START_POS.y; player.z = START_POS.z; player.vy = 0;
         updateCamera();
     }
 }
@@ -218,7 +201,7 @@ function checkOutOfBounds(){
 function animate(){
     requestAnimationFrame(animate);
     applyGravity();
-    checkOutOfBounds(); // bug durumunda ışınla
+    checkOutOfBounds();
     renderer.render(scene,camera);
 }
 animate();
